Feat: 루트 상세 정보 조회 API 로직 수정