@@ -1,6 +1,8 @@
 package com.otakumap.domain.place.converter;
 
 import com.otakumap.domain.animation.dto.AnimationResponseDTO;
+import com.otakumap.domain.hash_tag.converter.HashTagConverter;
+import com.otakumap.domain.hash_tag.dto.HashTagResponseDTO;
 import com.otakumap.domain.mapping.PlaceAnimation;
 import com.otakumap.domain.place.DTO.PlaceResponseDTO;
 import com.otakumap.domain.place.entity.Place;
@@ -28,7 +30,7 @@ public class PlaceConverter {
                 .build();
     }
 
-    public static PlaceResponseDTO.PlaceDetailDTO toPlaceDetailDTO(Place place, PlaceResponseDTO.PlaceAnimationListDTO animationListDTO, List<String> hashtags, boolean isLiked) {
+    public static PlaceResponseDTO.PlaceDetailDTO toPlaceDetailDTO(Place place, PlaceAnimation placeAnimation, List<HashTagResponseDTO.HashTagDTO> hashtags, boolean isLiked) {
         return PlaceResponseDTO.PlaceDetailDTO.builder()
                 .id(place.getId())
                 .name(place.getName())
@@ -36,25 +38,24 @@ public class PlaceConverter {
                 .longitude(place.getLng())
                 .isFavorite(place.getIsFavorite())
                 .isLiked(isLiked)
-                .animationListDTO(animationListDTO)
+                .animationName(placeAnimation.getAnimation().getName())
                 .hashtags(hashtags)
                 .build();
     }
 
-    public static List<String> toPlaceHashtagsDTO(List<PlaceAnimation> placeAnimations) {
-        return placeAnimations.stream()
-                .flatMap(placeAnimation -> placeAnimation.getPlaceAnimationHashTags().stream())
-                .map(placeAnimationHashTag -> placeAnimationHashTag.getHashTag().getName())
-                .collect(Collectors.toList());
+    public static List<HashTagResponseDTO.HashTagDTO> toPlaceHashtagsDTO(PlaceAnimation placeAnimation) {
+        return placeAnimation.getPlaceAnimationHashTags()
+                .stream()
+                .map(placeAnimationHashTag -> HashTagConverter.toHashTagDTO(placeAnimationHashTag.getHashTag())).toList();
     }
 
     public static PlaceResponseDTO.PlaceDTO toPlaceDTO(Place place) {
-        return new PlaceResponseDTO.PlaceDTO(
-                place.getId(),
-                place.getName(),
-                place.getLat(),
-                place.getLng()
-        );
+        return PlaceResponseDTO.PlaceDTO.builder()
+                .id(place.getId())
+                .name(place.getName())
+                .latitude(place.getLat())
+                .longitude(place.getLng())
+                .build();
     }
 
     public static List<PlaceResponseDTO.PlaceDTO> toPlaceDTOList(List<Place> places) {
@@ -63,13 +64,11 @@ public class PlaceConverter {
                 .collect(Collectors.toList());
     }
 
-    public static PlaceResponseDTO.SearchedPlaceInfoDTO toSearchedPlaceInfoDTO(Place place,
-                                                                               List<AnimationResponseDTO.AnimationInfoDTO> animationDTOs) {
+    public static PlaceResponseDTO.SearchedPlaceInfoDTO toSearchedPlaceInfoDTO(Place place, List<AnimationResponseDTO.AnimationInfoDTO> animationDTOs) {
         return PlaceResponseDTO.SearchedPlaceInfoDTO.builder()
                 .placeId(place.getId())
                 .name(place.getName())
                 .animations(animationDTOs)
                 .build();
-
     }
 }
